--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,11 @@ path = "src/bin.rs"
 
 [dependencies]
 libc = "0.2"
+
+[target.'cfg(windows)'.dependencies.windows-sys]
+version = "0.52"
+features = [
+  "Win32_Foundation",
+  "Win32_System_Console",
+  "Win32_UI_Input_KeyboardAndMouse",
+]
